.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/SWOT__c.object
<CustomObject>
    <description>add feedback to an account for a Strength, Weakness, Opportunity or Threat</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Related Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>AutoTrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VinSolutions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <inlineHelpText>updated by workflow when the record is created the system will look up the user&apos;s role and update the field for reporting.</inlineHelpText>
        <label>Created by Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SWOTS</relationshipLabel>
        <relationshipName>SWOTS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <inlineHelpText>workflow rolls up the first 97 characters of the notes into a preview field that can be used in views and related list so users can gauge the content of the info without having to click into the record</inlineHelpText>
        <label>Preview</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_SWOT_Notes__c</fullName>
        <description>Used for reporting purposes only.</description>
        <label>Prior SWOT Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_SWOT__c</fullName>
        <label>Prior SWOT Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWOT_Age__c</fullName>
        <formula>TODAY()  -  SWOT_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SWOT Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SWOT_Date__c</fullName>
        <description>Records the date that the SWOT Type is changed. This field should be hidden.</description>
        <label>SWOT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SWOT_Image__c</fullName>
        <formula>CASE( SWOT_Type__c , 
&quot;Green&quot;,  IMAGE(&quot;servlet/servlet.ImageServer?id=015E0000000g6Bp&amp;oid=00DM0000001eO1f&amp;lastMod=1344464069000&quot;, &quot;Green&quot;), 
&quot;Yellow&quot;, IMAGE(&quot;servlet/servlet.ImageServer?id=015E0000000g6Iw&amp;oid=00DM0000001eO1f&amp;lastMod=1344464079000&quot;, &quot;Yellow&quot;), 
&quot;Red&quot;, IMAGE(&quot;servlet/servlet.ImageServer?id=015E0000000g6C2&amp;oid=00DM0000001eO1f&amp;lastMod=1344464070000&quot;, &quot;Red&quot;), 
 null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SWOT Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWOT_Notes__c</fullName>
        <label>SWOT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SWOT_Type__c</fullName>
        <label>SWOT Type</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SWOT_Value_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SWOT Value</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_CCalls__c</fullName>
        <formula>Dealer__r.of_BU_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of CCalls</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SWOT</label>
    <nameField>
        <displayFormat>SWOT# {00000000}</displayFormat>
        <label>SWOT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOTS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>